--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lecture 14 - Javascript</title>
+    <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
     <!-- Connecting -->
@@ -13,5 +14,6 @@
     <!-- .addEventListeners -->
     <!-- Get Values -->
     
+<script src="script/script.js"></script>
 </body>
 </html>
